tests/typechecker/pass/201-array.hyg
let arr: array {int} = (array(4, 420 + 6));
let length: int = arrayLength(arr);
length