tests/typechecker/fail/201-array.hyg
(array(4.0f, 420.0f + 6.0f)): array {float}